# atelierGABC

./: .gitignore  atelier-gabc.spec  build.py  pyproject.toml
.github/workflows/: release.yml
app/: app.py
app/defaults/: configuration.tex  frpunct.tex
app/static/: exsurge.js  index.html  preview-worker.js
app/templates/: score.tex.j2
