[project]
name = "atelier-gabc"
version = "0.0.1"
description = "Éditeur GABC et compilateur PDF pour le chant grégorien"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "jinja2>=3.0",
    "velopack",
]

[project.optional-dependencies]
build = ["pyinstaller"]

[project.urls]
Repository = "https://github.com/azfoo/atelier-gabc"
